--- a/index.html
+++ b/index.html
@@ -2,25 +2,28 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Tết Bính Ngọ | Mùa Xuân Bình Dương</title>
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
   </head>
-  <body>
+  <body class="home-page">
     <header>
       <div class="logo">
-        <h1>Tết Quê Hương</h1>
+        <a href="index.html" style="display: flex; align-items: center; text-decoration: none">
+          <img src="images/stu_logo.webp" alt="Logo Trường" style="height: 50px; margin-right: 15px" />
+          <h1>Tết Quê Hương</h1>
+        </a>
       </div>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Trang Chủ</a></li>
           <li><a href="gioi-thieu.html">Giới Thiệu</a></li>
-          <li><a href="phong-tuc.html">Phong Tục</a></li>
+          <li><a href="tet-binh-duong.html">Tết Bình Dương</a></li>
           <li><a href="am-thuc.html">Ẩm Thực</a></li>
           <li><a href="van-hoa.html">Văn Hóa</a></li>
           <li><a href="thu-vien.html">Thư Viện</a></li>
-          <li><a href="ky-uc.html">Ký Ức</a></li>
+
           <li><a href="lien-he.html">Liên Hệ</a></li>
         </ul>
       </nav>
@@ -29,22 +32,18 @@
     <section class="hero-banner">
       <video autoplay loop muted playsinline class="bg-video">
         <source src="images/phao_hoa.mp4" type="video/mp4" />
-        Trình duyệt của bạn không hỗ trợ thẻ video.
       </video>
-
       <div class="overlay"></div>
-
       <div class="banner-content">
-        <h2>Âm Vang Tết Bính Ngọ</h2>
-        <p>Khám phá hương vị và sắc xuân rực rỡ tại quê hương</p>
+        <h2>Tết Bính Ngọ</h2>
+        <p>Khám phá hương vị và sắc xuân</p>
+        <div class="greeting-text">Chúc Mừng Năm Mới 2026</div>
         <a href="gioi-thieu.html" class="btn">Khám phá ngay</a>
       </div>
     </section>
 
     <footer>
-      <p>&copy; 2026 Thiết kế bởi Phan Văn Mạnh, DH52301174. Bài tập: Trang web Tết quê hương.</p>
+      <p>&copy; 2026 Thiết kế bởi Phan Văn Mạnh, DH52301174.</p>
     </footer>
-
-    <script src="js/main.js"></script>
   </body>
 </html>
