fix typo and add dropdown responsive

--- a/am-thuc.html
+++ b/am-thuc.html
@@ -15,6 +15,11 @@
           <h1>Tết Quê Hương</h1>
         </a>
       </div>
+      <div class="menu-toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Trang Chủ</a></li>
