--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -15,6 +15,11 @@
           <h1>Tết Quê Hương</h1>
         </a>
       </div>
+      <div class="menu-toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Trang Chủ</a></li>
@@ -53,14 +58,6 @@
             Năm 2026 là năm Bính Ngọ (Con Ngựa). Ngựa tượng trưng cho sự nhanh nhẹn, kiên cường và thành công. Người xưa quan niệm năm Ngựa mang đến nguồn năng lượng dồi dào, sự bứt phá và may mắn
             trong công việc cũng như cuộc sống.
           </p>
-        </div>
-
-        <div class="author-info">
-          <h3>Thông Tin Tác Giả</h3>
-          <p><strong>Sinh viên thực hiện:</strong> Phan Văn Mạnh</p>
-          <p><strong>Mã số sinh viên:</strong> DH52301174</p>
-          <p><strong>Lớp:</strong> D23_TH08</p>
-          <p><strong>Niên khóa:</strong> 2023 - 2027</p>
         </div>
       </div>
     </main>
