--- a/lien-he.html
+++ b/lien-he.html
@@ -15,6 +15,11 @@
           <h1>Tết Quê Hương</h1>
         </a>
       </div>
+      <div class="menu-toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Trang Chủ</a></li>
@@ -32,7 +37,7 @@
     <main class="content-page">
       <div class="container">
         <h1>Gửi Lời Chúc Tết / Góp ý</h1>
-        <p class="intro-large">Chia sẻ những lời chúc tốt đẹp nhất đến với mọi người hoặc liên hệ với ban quản trị.</p>
+        <p class="intro-large">Chia sẻ ý kiến và góp ý của bạn tôi sẽ theo dõi và phản hồi trong thời gian sớm nhất</p>
 
         <div class="contact-form content-block">
           <form action="https://formspree.io/f/mvzbbrqk" method="POST" id="contactForm">
