--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
     <footer>
       <p>&copy; 2026 Thiết kế bởi Phan Văn Mạnh, DH52301174.</p>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
